2004-02-29  Dodji Seketeli  <dodji@gnome.org>

	* src/cr-rgb.c: 
	(cr_rgb_set): fixed a stupid bug here.

2004-02-29  Dodji Seketeli  <dodji@gnome.org>

	* src/cr-sel-eng.c: applied a patch of Rob BUIS
	to add the support of the :lang() pseudo class using
	the pluggable pseudo class system.
	* tests/test5-main.c,tests/test-inputs/test5.1.css,tests/test-output-refs/test5.1.css.out:
	Updated the non regression tests suite to test the :lang() pseudo
	class.

2004-02-29  Dodji Seketeli  <dodji@gnome.org>

	* src/cr-statement.[ch],src/cr-stylesheet.[ch]:
	applied a patch from Rob BUIS that provides new apis
	to manipulate CSS statements.

2004-02-29  Dodji Seketeli  <dodji@gnome.org>

	* src/cr-sel-eng.c: 
	(put_css_properties_in_props_list): fixed a small bug in here:
	Always Initialise output function argument !!!.

2004-02-29  Dodji Seketeli <dodji@gnome.org>

	* src/cr-prop-list.[ch], src/Makefile.am,src/libcroco.h: 
	Created this new CRPropList class.
	* src/cr-sel-eng.c: 
	(put_css_properties_in_props_list): added this new helper
	function.
	(cr_sel_eng_get_matched_properties_from_cascade):
	Created a new version of this function to make it use
	the new CRPropList instead of a hashtable. Putting
	properties/declaration in a hashtable make us loose
	the "order" in which declarations are present in the
	ruleset. That's why I use a CRPropList instead.
	* src/cr-style.c: 
	(cr_style_set_style_from_decl): fix a silly error that
	make border-right and border-top switch.

2004-02-26  Dodji Seketeli  <dodji@gnome.org>

	* src/cr-sel-eng.c: 
	(cr_sel_eng_get_matched_properties_from_cascade):
	Second (or maybe third) attempt to fix the cascading
	cascading thing. I got *really* confused here.
	I hope it works this time.
	Thanks to to Rob BUIS who reported the bug.
	Off to bed now.

2004-02-24  Dodji Seketeli <dodji@gnome.org>

	* src/cr-parser.c: 
	(cr_parser_parse_import): fixed a parsing bug reported
	by David A Knight. This should now properly parse