@@ -2507,7 +2507,16 @@ cr_tknzr_get_next_token (CRTknzr *a_this, CRToken **a_tk)
                 }
                 break ;
 
-        case '0' ... '9':
+        case '0':
+        case '1':
+        case '2':
+        case '3':
+        case '4':
+        case '5':
+        case '6':
+        case '7':
+        case '8':
+        case '9':
         case '.':
         {
                 CRNum *num = NULL ;
